--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "dependencies": {
     "@vimeo/player": "^2.20.1",
+    "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
+    "pixabay": "^0.0.1",
     "simplelightbox": "^2.14.1"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
