--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.4.0",
     "lodash": "^4.17.21",
     "modern-normalize": "^1.1.0",
+    "notiflix": "^3.2.6",
     "pixabay": "^0.0.1",
     "simplelightbox": "^2.14.1"
   },
